# tribunals

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  scratch.ipynb
api/: Dockerfile  README.md
api/app/: __init__.py  concepts.py  documents.py  main.py
api/app/routers/: concepts.py  documents.py
cac/: README.md  cac_sqlite_pipeline.py  pyproject.toml  scrape_outcomes.py
cac/data/: .gitignore
data/: concepts.json
data/raw/: concepts.json  known_search_terms.json
docs/: argilla.md
notebooks/: 01-topic-modelling.ipynb  02-exploring-concept-mentions.ipynb  03-elasticsearch-classifier.ipynb  04-sampling-for-manual-labelling.ipynb  README.md  topic-modelling.ipynb
scripts/: classify.py  classify_documents.py  classify_elasticsearch.py  classify_regex.py  evaluate_ndcg.py  generate_document_summaries.py  generate_gold_standard_relevance_judgements.py  generate_relevance_judgements.py  index.py  index_concepts.py  index_documents.py  index_sentences.py  parse_pdfs.py  populate_argilla.py  process.py  process_concepts.py  scrape.py  scrape_pdfs.py  train_classifiers.py
src/: classifiers.py  concept.py  document.py  identifiers.py  logging.py  span.py
src/classifiers/: __init__.py  classifier.py  elasticsearch.py  embedding.py  regex.py  setfit.py  spancat.py
src/evaluation/: ndcg.py
src/search/: __init__.py  core.py
webapp/: README.md  package.json  tailwind.config.ts
webapp/pages/: index.tsx
webapp/pages/concepts/: [uid].tsx
