[tool.poetry]
name = "tribunals"
version = "0.1.0"
description = ""
authors = ["harrisonpim <hello@harrisonpim.com>"]
readme = "README.md"
packages = [{ include = "src" }, { include = "scripts" }]


[tool.poetry.dependencies]
python = ">=3.10,<3.12"
argilla = "^1.28.0"
elasticsearch = "8.5"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl"}
pdfplumber = "^0.11.0"
pre-commit = "^3.7.0"
pydantic = "^2.7.0"
rich = "^13.7.1"
Scrapy = "^2.11.1"
setfit = "^1.0.3"
spacy = "^3.7.4"
torch = "^2.3.0"
transformers = "^4.40.1"

[tool.poetry.group.notebook]
optional = true
[tool.poetry.group.notebook.dependencies]
umap-learn = "^0.5.6"
seaborn = "^0.13.2"
plotly = "^5.21.0"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
nbformat = "^5.10.4"

[tool.poetry.group.api]
optional = true
[tool.poetry.group.api.dependencies]
fastapi = "^0.110.3"
uvicorn = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = ["E", "F", "I"]
extend-include = ["*.ipynb"]
