[tool.poetry]
name = "tribunals"
version = "0.1.0"
description = ""
authors = ["harrisonpim <hello@harrisonpim.com>"]
readme = "README.md"
packages = [{ include = "src" }, { include = "scripts" }]


[tool.poetry.dependencies]
python = ">=3.10,<3.12"
elasticsearch = "8.5"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl"}
pdfplumber = "^0.11.0"
pre-commit = "^3.7.0"
pydantic = "^2.7.0"
rich = "^13.7.1"
Scrapy = "^2.11.1"
setfit = "^1.0.3"
spacy = "^3.7.4"
torch = "^2.3.0"
transformers = "^4.40.1"
python-dotenv = "^1.0.1"
anthropic = "^0.25.9"
loguru = "^0.7.2"
fastapi = "^0.111.0"
typer = "^0.12.3"
numpy = "1.26.4"


[tool.poetry.group.notebook]
optional = true
[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"
jupyter = "^1.0.0"
nbformat = "^5.10.4"
pandas = "^2.2.2"
plotly = "^5.21.0"
seaborn = "^0.13.2"
umap-learn = "^0.5.6"

[tool.poetry.group.api]
optional = true
[tool.poetry.group.api.dependencies]
uvicorn = "^0.29.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = ["E", "F", "I"]
extend-include = ["*.ipynb"]
