[tool.poetry]
name = "cac"
version = "0.1.0"
description = ""
authors = ["Jamie Parkinson <j.parkinson@wellcome.org>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.2"
markdownify = "^0.12.1"
pymupdf4llm = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
